added observations pertaining to the visualisations of the satellite data

--- a/notebooks/01_S5P_EDA_and_Preprocessing.ipynb
+++ b/notebooks/01_S5P_EDA_and_Preprocessing.ipynb
@@ -609,6 +609,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a010d76",
+   "metadata": {},
+   "source": [
+    "## Observations: Satellite Data Value Distributions\n",
+    "\n",
+    "Based on the histograms and KDE plots:\n",
+    "\n",
+    "* **$NO_2$ and $SO_2$:** Both show **highly right-skewed** (positively skewed) distributions. The vast majority of measurements are clustered at very low values (close to zero), with a long tail extending towards infrequent higher values. This is typical for pollutants with localized sources or episodic events.\n",
+    "* **$CO$:** This distribution is also **right-skewed**, but less extremely than $NO_2$ or $SO_2$. Values are centered around approximately 0.04 mol/m², with a noticeable tail towards higher concentrations.\n",
+    "* **$O_3$ and Aerosol Index:** These distributions appear much more **symmetrical and roughly resemble a normal distribution**.\n",
+    "    * $O_3$ is centered around approximately 0.13 mol/m².\n",
+    "    * Aerosol Index is centered around 0, with values extending both positively and negatively.\n",
+    "\n",
+    "**Overall:** The gaseous pollutants directly linked to combustion ($NO_2$, $SO_2$, $CO$) show right-skewed distributions, indicating generally low background levels punctuated by higher concentration events or locations. Ozone and Aerosol Index exhibit more balanced, bell-shaped distributions across the dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "95729210",
@@ -796,6 +814,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e68bde2",
+   "metadata": {},
+   "source": [
+    "## Observations: Pollutant Distributions Across Locations (Satellite Data)\n",
+    "\n",
+    "The violin plots reveal variations in the distribution of satellite-measured pollutants across the different monitoring locations in Delhi NCR:\n",
+    "\n",
+    "* **$NO_2$:**\n",
+    "    * All locations show distributions heavily skewed towards zero, indicating mostly low background levels.\n",
+    "    * **Anand Vihar, Punjabi Bagh, Mandir Marg, and Sector 62 (Noida)** exhibit noticeably longer tails extending to higher values compared to other locations like RK Puram, Sector 51 (Gurugram), and Vikas Sadan (Gurugram). This suggests more frequent or intense high $NO_2$ events captured by the satellite over these specific areas, potentially reflecting higher traffic or industrial activity influencing the atmospheric column.\n",
+    "\n",
+    "* **$SO_2$:**\n",
+    "    * Similar to $NO_2$, the distributions are strongly right-skewed, concentrated near zero.\n",
+    "    * Longer tails indicating occasional higher values are visible across most locations, particularly prominent for **Sector 51 (Gurugram), Sector 62 (Noida), and Mandir Marg**. Anand Vihar also shows a significant tail.\n",
+    "\n",
+    "* **$CO$:**\n",
+    "    * The distributions are more symmetrical than $NO_2$ or $SO_2$, but still show some right skewness (tails extending upwards).\n",
+    "    * Median values appear broadly similar across locations, generally hovering around 0.04 mol/m².\n",
+    "    * **Anand Vihar and Mandir Marg** might have slightly wider distributions and longer upper tails compared to the Gurugram locations.\n",
+    "\n",
+    "* **$O_3$:**\n",
+    "    * Distributions are relatively symmetrical and bell-shaped across all locations.\n",
+    "    * Median values and overall shapes appear quite consistent, centered roughly around 0.125-0.13 mol/m². There isn't a dramatic difference in the typical total column ozone levels observed by the satellite between these sites.\n",
+    "\n",
+    "* **Aerosol Index (AI):**\n",
+    "    * Distributions are fairly symmetrical around zero for all locations.\n",
+    "    * The spread (width of the violins) appears similar across most sites.\n",
+    "    * **Anand Vihar and Mandir Marg** possibly show slightly longer tails towards both positive and negative extremes compared to others like RK Puram or the Gurugram sites.\n",
+    "\n",
+    "**Overall:** Locations known for higher ground-level pollution (like Anand Vihar) often show longer tails towards high values in the satellite data for pollutants like $NO_2$ and $SO_2$. $O_3$ distributions appear relatively uniform across the region from the satellite's perspective. $CO$ and Aerosol Index show moderate variability between locations. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "16a8542b",
@@ -894,6 +946,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8220ba35",
+   "metadata": {},
+   "source": [
+    "## Observations: Pollutant Time Series Across Locations (Satellite Data)\n",
+    "\n",
+    "The time series plots show the daily variations of each satellite-measured pollutant from 2020 to late 2025 across all monitored locations:\n",
+    "\n",
+    "* **$NO_2$:**\n",
+    "    * **Strong Seasonality:** Exhibits a very clear annual cycle with pronounced peaks during the winter months (roughly Oct-Jan) and much lower values during the monsoon season (roughly Jun-Sep). This pattern repeats consistently each year. \n",
+    "    * **Peak Events:** The winter peaks vary in intensity year to year, with particularly high spikes visible around late 2020/early 2021 and late 2023.\n",
+    "    * **Location Differences:** While all locations follow the same seasonal pattern, the magnitude of the winter peaks differs. Locations like **Anand Vihar, Punjabi Bagh, Mandir Marg, and Sector 62 (Noida)** often show higher peak values compared to **RK Puram and the Gurugram sites**, aligning with the violin plot observations.\n",
+    "    * **Synchronization:** The rise and fall patterns are highly synchronized across all locations.\n",
+    "\n",
+    "* **$SO_2$:**\n",
+    "    * **Less Clear Seasonality:** Shows significant variability and spikes, but a consistent annual seasonal pattern like $NO_2$ is less obvious. There might be slight increases during winter/post-monsoon periods.\n",
+    "    * **Spiky Nature:** Characterized by numerous sharp, short-duration peaks throughout the year, suggesting episodic events or localized sources significantly impacting the column density. Some major spikes occur in late 2023/early 2024.\n",
+    "    * **Location Differences:** Certain locations experience more intense spikes (e.g., **Mandir Marg, Sector 51, Sector 62** show some very high peaks at different times), but there isn't one location consistently higher than all others across the entire period.\n",
+    "    * **Synchronization:** Less synchronized than $NO_2$. While some major events seem to affect multiple locations, many peaks are localized.\n",
+    "\n",
+    "* **$CO$:**\n",
+    "    * **Clear Seasonality:** Similar to $NO_2$, CO shows distinct seasonality with higher values during winter/post-monsoon (Oct-Jan/Feb) and lower values during monsoon (Jun-Sep).\n",
+    "    * **Peak Events:** Winter peaks are evident each year, with notable high periods in late 2020 and late 2023/early 2024.\n",
+    "    * **Location Differences:** All locations follow the seasonal trend, but **Anand Vihar and Mandir Marg** occasionally reach higher peak concentrations during winter compared to others.\n",
+    "    * **Synchronization:** The seasonal patterns are well synchronized across all locations.\n",
+    "\n",
+    "* **$O_3$:**\n",
+    "    * **Distinct Seasonality (Opposite Trend):** Shows a clear annual cycle, but *opposite* to $NO_2$ and $CO$. Ozone levels peak during the pre-monsoon/summer months (roughly Mar-Jun) and are lowest during the monsoon and winter months. \n",
+    "    * **Location Differences:** The patterns are remarkably consistent across all locations. There are minimal differences in the measured total column ozone between the sites throughout the year.\n",
+    "    * **Synchronization:** Very highly synchronized across all locations.\n",
+    "\n",
+    "* **Aerosol Index (AI):**\n",
+    "    * **Seasonality Present:** Shows seasonal variations, typically peaking during the pre-monsoon/dust season (Apr-Jun) and having another period of elevated values post-monsoon/winter (Oct-Jan), likely related to haze and biomass burning. Values tend to be lower during the monsoon.\n",
+    "    * **High Variability:** Exhibits significant day-to-day fluctuations and spikes.\n",
+    "    * **Location Differences:** While the general seasonal pattern is similar, the magnitude and timing of peaks can vary between locations. **Anand Vihar and Mandir Marg** occasionally show higher positive peaks. Some locations show sharp negative dips at times.\n",
+    "    * **Synchronization:** Moderately synchronized, especially during major seasonal events (like dust storms or post-monsoon haze), but with considerable local variation.\n",
+    "\n",
+    "**Overall:** $NO_2$, $CO$, and $O_3$ show strong, highly synchronized seasonal patterns across the region ($NO_2$/$CO$ peaking in winter, $O_3$ peaking in summer). $SO_2$ is much spikier and less seasonally distinct. Aerosol Index shows seasonality related to dust and haze events but also high variability. Location-specific differences are most apparent in the peak magnitudes of $NO_2$ and $SO_2$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "id": "1a25b34b",
@@ -954,12 +1047,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c2731fb",
+   "cell_type": "markdown",
+   "id": "f89efb47",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Observations: Satellite Pollutant Correlation Matrix\n",
+    "\n",
+    "The heatmap shows the Pearson correlation coefficients between the different satellite-measured pollutants across all locations and the entire time period:\n",
+    "\n",
+    "* **Moderate Positive Correlation:**\n",
+    "    * **$NO_2$ and $CO$ (0.38):** These pollutants show the strongest positive relationship in the matrix. This is expected as both are often co-emitted from combustion sources (vehicles, industry). \n",
+    "\n",
+    "* **Weak Positive Correlations:**\n",
+    "    * **$CO$ and Aerosol Index (0.25):** A weak positive association, suggesting that higher CO sometimes coincides with higher aerosol levels, potentially during haze events or biomass burning.\n",
+    "    * **$NO_2$ and Aerosol Index (0.12):** Very weak positive correlation.\n",
+    "    * **$NO_2$ and $SO_2$ (0.12):** Very weak positive correlation.\n",
+    "    * **$SO_2$ and Aerosol Index (0.06):** Negligible positive correlation.\n",
+    "    * **$SO_2$ and $CO$ (0.05):** Negligible positive correlation.\n",
+    "\n",
+    "* **Weak Negative Correlations:**\n",
+    "    * **$NO_2$ and $O_3$ (-0.13):** A weak negative correlation. This is chemically plausible, as high $NO_x$ (which includes $NO_2$) can sometimes deplete ozone locally, especially under specific atmospheric conditions (like high $NO_x$ titration in winter).\n",
+    "    * **$CO$ and $O_3$ (-0.03):** Negligible negative correlation.\n",
+    "\n",
+    "* **Near-Zero Correlations:**\n",
+    "    * **$SO_2$ and $O_3$ (0.00):** Essentially no linear correlation.\n",
+    "    * **$O_3$ and Aerosol Index (0.01):** Essentially no linear correlation.\n",
+    "\n",
+    "**Overall:** The strongest link observed in the satellite data is between $NO_2$ and $CO$. Ozone shows a weak negative correlation with $NO_2$. Most other pairings show very weak or negligible linear relationships when considering the entire dataset across all locations. This suggests complex interactions rather than simple, strong linear dependencies between most of these column measurements."
+   ]
   }
  ],
  "metadata": {
