dev: added docs for phase 3

--- a/notebooks/Phase_3_OSMX.ipynb
+++ b/notebooks/Phase_3_OSMX.ipynb
@@ -858,120 +858,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 71,
    "id": "eba76e05",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>notes</th>\n",
+       "      <th>distance_to_major_road</th>\n",
+       "      <th>total_road_length_m</th>\n",
+       "      <th>major_road_length_m</th>\n",
+       "      <th>pct_green</th>\n",
+       "      <th>pct_industrial</th>\n",
+       "      <th>pct_residential</th>\n",
+       "      <th>building_density</th>\n",
+       "      <th>avg_building_area_m2</th>\n",
+       "      <th>median_building_area_m2</th>\n",
+       "      <th>building_count</th>\n",
+       "      <th>major_road_fraction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Anand Vihar, Delhi (DPCC / CPCB)</td>\n",
+       "      <td>28.655900</td>\n",
+       "      <td>77.294900</td>\n",
+       "      <td>CPCB list</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>407.381680</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.003847</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.219243</td>\n",
+       "      <td>0.614025</td>\n",
+       "      <td>6419.729223</td>\n",
+       "      <td>108.416619</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Punjabi Bagh, Delhi (DPCC)</td>\n",
+       "      <td>28.674000</td>\n",
+       "      <td>77.131000</td>\n",
+       "      <td>CPCB list</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>774.726956</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.417033</td>\n",
+       "      <td>272.509502</td>\n",
+       "      <td>200.112470</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mandir Marg, Delhi (DPCC)</td>\n",
+       "      <td>28.636429</td>\n",
+       "      <td>77.201067</td>\n",
+       "      <td>GIS study</td>\n",
+       "      <td>92.656113</td>\n",
+       "      <td>545.059655</td>\n",
+       "      <td>82.499952</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.241533</td>\n",
+       "      <td>2525.269584</td>\n",
+       "      <td>713.924020</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.151359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>R K Puram, Delhi (DPCC)</td>\n",
+       "      <td>28.563262</td>\n",
+       "      <td>77.186937</td>\n",
+       "      <td>paper</td>\n",
+       "      <td>28.201322</td>\n",
+       "      <td>1398.876640</td>\n",
+       "      <td>386.628614</td>\n",
+       "      <td>0.156040</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.835146</td>\n",
+       "      <td>0.191951</td>\n",
+       "      <td>668.960218</td>\n",
+       "      <td>401.920416</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.276385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sector-51 Gurugram - HSPCB</td>\n",
+       "      <td>28.435180</td>\n",
+       "      <td>77.072000</td>\n",
+       "      <td>env clearance doc</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>454.427825</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Vikas Sadan Gurugram - HSPCB</td>\n",
+       "      <td>28.450129</td>\n",
+       "      <td>77.026306</td>\n",
+       "      <td>amazon link?</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Sector - 125 Noida - UPPCB</td>\n",
+       "      <td>28.589700</td>\n",
+       "      <td>77.310000</td>\n",
+       "      <td>UPPCB</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>633.084599</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.921994</td>\n",
+       "      <td>0.078006</td>\n",
+       "      <td>0.170812</td>\n",
+       "      <td>412.122785</td>\n",
+       "      <td>355.152230</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[{'station': 'Anand Vihar, Delhi (DPCC / CPCB)',\n",
-       "  'lat': 28.6559,\n",
-       "  'lon': 77.2949,\n",
-       "  'notes': 'CPCB list',\n",
-       "  'distance_to_major_road': nan,\n",
-       "  'total_road_length_m': 407.38167952783743,\n",
-       "  'major_road_length_m': 0.0,\n",
-       "  'pct_green': 0.0038466799783292696,\n",
-       "  'pct_industrial': 0.0,\n",
-       "  'pct_residential': 0.21924256434370418,\n",
-       "  'building_density': 0.6140248660724802,\n",
-       "  'avg_building_area_m2': 6419.72922278817,\n",
-       "  'median_building_area_m2': 108.41661903221998,\n",
-       "  'building_count': 3},\n",
-       " {'station': 'Punjabi Bagh, Delhi (DPCC)',\n",
-       "  'lat': 28.674,\n",
-       "  'lon': 77.131,\n",
-       "  'notes': 'CPCB list',\n",
-       "  'distance_to_major_road': nan,\n",
-       "  'total_road_length_m': 774.7269562412803,\n",
-       "  'major_road_length_m': 0.0,\n",
-       "  'pct_green': 0.0,\n",
-       "  'pct_industrial': 0.0,\n",
-       "  'pct_residential': 1.0,\n",
-       "  'building_density': 0.4170334408403472,\n",
-       "  'avg_building_area_m2': 272.5095019543239,\n",
-       "  'median_building_area_m2': 200.1124696087577,\n",
-       "  'building_count': 48},\n",
-       " {'station': 'Mandir Marg, Delhi (DPCC)',\n",
-       "  'lat': 28.636429,\n",
-       "  'lon': 77.201067,\n",
-       "  'notes': 'GIS study',\n",
-       "  'distance_to_major_road': 92.65611257641245,\n",
-       "  'total_road_length_m': 545.0596551552638,\n",
-       "  'major_road_length_m': 82.49995177640238,\n",
-       "  'pct_green': 0.0,\n",
-       "  'pct_industrial': 0.0,\n",
-       "  'pct_residential': 0.0,\n",
-       "  'building_density': 0.24153328966610532,\n",
-       "  'avg_building_area_m2': 2525.269583740117,\n",
-       "  'median_building_area_m2': 713.9240200464333,\n",
-       "  'building_count': 3},\n",
-       " {'station': 'R K Puram, Delhi (DPCC)',\n",
-       "  'lat': 28.563262,\n",
-       "  'lon': 77.186937,\n",
-       "  'notes': 'paper',\n",
-       "  'distance_to_major_road': 28.201322387282172,\n",
-       "  'total_road_length_m': 1398.8766400467882,\n",
-       "  'major_road_length_m': 386.6286137376442,\n",
-       "  'pct_green': 0.15603984686221312,\n",
-       "  'pct_industrial': 0.0,\n",
-       "  'pct_residential': 0.8351459693192372,\n",
-       "  'building_density': 0.19195118400091352,\n",
-       "  'avg_building_area_m2': 668.96021826413,\n",
-       "  'median_building_area_m2': 401.9204163437725,\n",
-       "  'building_count': 9},\n",
-       " {'station': 'Sector-51 Gurugram - HSPCB',\n",
-       "  'lat': 28.43518,\n",
-       "  'lon': 77.072,\n",
-       "  'notes': 'env clearance doc',\n",
-       "  'distance_to_major_road': nan,\n",
-       "  'total_road_length_m': 454.4278251163249,\n",
-       "  'major_road_length_m': 0.0,\n",
-       "  'pct_green': nan,\n",
-       "  'pct_industrial': nan,\n",
-       "  'pct_residential': nan,\n",
-       "  'building_density': 0.0,\n",
-       "  'avg_building_area_m2': nan,\n",
-       "  'median_building_area_m2': nan,\n",
-       "  'building_count': 0},\n",
-       " {'station': 'Vikas Sadan Gurugram - HSPCB',\n",
-       "  'lat': 28.450129,\n",
-       "  'lon': 77.026306,\n",
-       "  'notes': 'amazon link?',\n",
-       "  'distance_to_major_road': nan,\n",
-       "  'total_road_length_m': 0.0,\n",
-       "  'major_road_length_m': 0.0,\n",
-       "  'pct_green': nan,\n",
-       "  'pct_industrial': nan,\n",
-       "  'pct_residential': nan,\n",
-       "  'building_density': 0.0,\n",
-       "  'avg_building_area_m2': nan,\n",
-       "  'median_building_area_m2': nan,\n",
-       "  'building_count': 0},\n",
-       " {'station': 'Sector - 125 Noida - UPPCB',\n",
-       "  'lat': 28.5897,\n",
-       "  'lon': 77.31,\n",
-       "  'notes': 'UPPCB',\n",
-       "  'distance_to_major_road': nan,\n",
-       "  'total_road_length_m': 633.0845990173888,\n",
-       "  'major_road_length_m': 0.0,\n",
-       "  'pct_green': 0.0,\n",
-       "  'pct_industrial': 0.9219938235799396,\n",
-       "  'pct_residential': 0.07800617642006029,\n",
-       "  'building_density': 0.17081184040970238,\n",
-       "  'avg_building_area_m2': 412.1227847726144,\n",
-       "  'median_building_area_m2': 355.1522301269035,\n",
-       "  'building_count': 13}]"
+       "                            station        lat        lon              notes  \\\n",
+       "0  Anand Vihar, Delhi (DPCC / CPCB)  28.655900  77.294900          CPCB list   \n",
+       "1        Punjabi Bagh, Delhi (DPCC)  28.674000  77.131000          CPCB list   \n",
+       "2         Mandir Marg, Delhi (DPCC)  28.636429  77.201067          GIS study   \n",
+       "3           R K Puram, Delhi (DPCC)  28.563262  77.186937              paper   \n",
+       "4        Sector-51 Gurugram - HSPCB  28.435180  77.072000  env clearance doc   \n",
+       "5      Vikas Sadan Gurugram - HSPCB  28.450129  77.026306       amazon link?   \n",
+       "6        Sector - 125 Noida - UPPCB  28.589700  77.310000              UPPCB   \n",
+       "\n",
+       "   distance_to_major_road  total_road_length_m  major_road_length_m  \\\n",
+       "0                     NaN           407.381680             0.000000   \n",
+       "1                     NaN           774.726956             0.000000   \n",
+       "2               92.656113           545.059655            82.499952   \n",
+       "3               28.201322          1398.876640           386.628614   \n",
+       "4                     NaN           454.427825             0.000000   \n",
+       "5                     NaN             0.000000             0.000000   \n",
+       "6                     NaN           633.084599             0.000000   \n",
+       "\n",
+       "   pct_green  pct_industrial  pct_residential  building_density  \\\n",
+       "0   0.003847        0.000000         0.219243          0.614025   \n",
+       "1   0.000000        0.000000         1.000000          0.417033   \n",
+       "2   0.000000        0.000000         0.000000          0.241533   \n",
+       "3   0.156040        0.000000         0.835146          0.191951   \n",
+       "4        NaN             NaN              NaN          0.000000   \n",
+       "5        NaN             NaN              NaN          0.000000   \n",
+       "6   0.000000        0.921994         0.078006          0.170812   \n",
+       "\n",
+       "   avg_building_area_m2  median_building_area_m2  building_count  \\\n",
+       "0           6419.729223               108.416619               3   \n",
+       "1            272.509502               200.112470              48   \n",
+       "2           2525.269584               713.924020               3   \n",
+       "3            668.960218               401.920416               9   \n",
+       "4                   NaN                      NaN               0   \n",
+       "5                   NaN                      NaN               0   \n",
+       "6            412.122785               355.152230              13   \n",
+       "\n",
+       "   major_road_fraction  \n",
+       "0             0.000000  \n",
+       "1             0.000000  \n",
+       "2             0.151359  \n",
+       "3             0.276385  \n",
+       "4             0.000000  \n",
+       "5                  NaN  \n",
+       "6             0.000000  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results"
+    "df_results"
    ]
   },
   {
