--- a/notebooks/model-training/MLFLOW_Discrepancy_Prediction.ipynb
+++ b/notebooks/model-training/MLFLOW_Discrepancy_Prediction.ipynb
@@ -1054,6 +1054,240 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0095f7cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a complete pipeline with preprocessor and best model\n",
+    "import joblib\n",
+    "\n",
+    "# Get the best model class\n",
+    "model_classes = {\n",
+    "    'LinearRegression': LinearRegression,\n",
+    "    'Ridge': lambda: Ridge(alpha=1.0, random_state=42),\n",
+    "    'Lasso': lambda: Lasso(alpha=1.0, random_state=42),\n",
+    "    'RandomForest': lambda: RandomForestRegressor(n_estimators=100, random_state=42, n_jobs=-1),\n",
+    "    'GradientBoosting': lambda: GradientBoostingRegressor(n_estimators=100, random_state=42),\n",
+    "}\n",
+    "\n",
+    "if XGBOOST_AVAILABLE:\n",
+    "    model_classes['XGBoost'] = lambda: xgb.XGBRegressor(n_estimators=100, random_state=42, n_jobs=-1)\n",
+    "\n",
+    "# Create a fresh instance of the best model\n",
+    "fresh_best_model = model_classes[best_model_name]()\n",
+    "\n",
+    "# Create a complete pipeline (preprocessor + model)\n",
+    "best_pipeline = Pipeline([\n",
+    "    ('preprocessor', preprocessor),\n",
+    "    ('model', fresh_best_model)\n",
+    "])\n",
+    "\n",
+    "# Retrain on full training data\n",
+    "print(f\"Retraining {best_model_name} on full training set...\")\n",
+    "best_pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate on test set\n",
+    "y_test_pred = best_pipeline.predict(X_test)\n",
+    "test_mae = mean_absolute_error(y_test, y_test_pred)\n",
+    "test_rmse = np.sqrt(mean_squared_error(y_test, y_test_pred))\n",
+    "test_r2 = r2_score(y_test, y_test_pred)\n",
+    "\n",
+    "print(f\"\\n✓ Pipeline trained successfully\")\n",
+    "print(f\"  Test RMSE: {test_rmse:.4f}\")\n",
+    "print(f\"  Test MAE: {test_mae:.4f}\")\n",
+    "print(f\"  Test R²: {test_r2:.4f}\")\n",
+    "\n",
+    "# Save the complete pipeline to disk\n",
+    "best_model_path = MODELS_DIR / \"best_model_pipeline.pkl\"\n",
+    "joblib.dump(best_pipeline, best_model_path)\n",
+    "print(f\"\\n✓ Best model pipeline saved to: {best_model_path}\")\n",
+    "\n",
+    "# Also save metadata for easy loading\n",
+    "metadata = {\n",
+    "    'model_name': best_model_name,\n",
+    "    'feature_columns': feature_cols,\n",
+    "    'categorical_columns': categorical_cols,\n",
+    "    'numerical_columns': numerical_cols,\n",
+    "    'ground_col': ground_col,\n",
+    "    'satellite_col': satellite_col,\n",
+    "    'scaling_factor': 50.0 if satellite_col == 'Aerosol_Index_satellite' else 1.0,\n",
+    "    'test_rmse': float(test_rmse),\n",
+    "    'test_mae': float(test_mae),\n",
+    "    'test_r2': float(test_r2)\n",
+    "}\n",
+    "\n",
+    "import json\n",
+    "metadata_path = MODELS_DIR / \"model_metadata.json\"\n",
+    "with open(metadata_path, 'w') as f:\n",
+    "    json.dump(metadata, f, indent=2)\n",
+    "print(f\"✓ Model metadata saved to: {metadata_path}\")\n",
+    "\n",
+    "# Save using MLflow as well\n",
+    "with mlflow.start_run(run_name=f\"{best_model_name}_final\"):\n",
+    "    mlflow.log_param(\"model_name\", f\"{best_model_name}_final\")\n",
+    "    mlflow.log_param(\"best_model\", best_model_name)\n",
+    "    mlflow.log_metric(\"test_mae\", test_mae)\n",
+    "    mlflow.log_metric(\"test_rmse\", test_rmse)\n",
+    "    mlflow.log_metric(\"test_r2\", test_r2)\n",
+    "    mlflow.sklearn.log_model(best_pipeline, \"best_model\")\n",
+    "    print(f\"✓ Model also saved to MLflow\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "087deb61",
+   "metadata": {},
+   "source": [
+    "## 9. Load and Use Saved Model (Example)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fabcfc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: How to load and use the saved model in your code\n",
+    "import joblib\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Paths (works in both notebook and script)\n",
+    "try:\n",
+    "    # In notebook\n",
+    "    MODELS_DIR = PROJECT_ROOT / \"models\"\n",
+    "except NameError:\n",
+    "    # In standalone script\n",
+    "    PROJECT_ROOT = Path(__file__).parent.parent\n",
+    "    MODELS_DIR = PROJECT_ROOT / \"models\"\n",
+    "MODEL_PATH = MODELS_DIR / \"best_model_pipeline.pkl\"\n",
+    "METADATA_PATH = MODELS_DIR / \"model_metadata.json\"\n",
+    "\n",
+    "# Load the model pipeline\n",
+    "print(\"Loading saved model...\")\n",
+    "loaded_pipeline = joblib.load(MODEL_PATH)\n",
+    "print(\"✓ Model loaded successfully!\")\n",
+    "\n",
+    "# Load metadata\n",
+    "with open(METADATA_PATH, 'r') as f:\n",
+    "    metadata = json.load(f)\n",
+    "print(f\"\\nModel Info:\")\n",
+    "print(f\"  Model Type: {metadata['model_name']}\")\n",
+    "print(f\"  Test RMSE: {metadata['test_rmse']:.4f}\")\n",
+    "print(f\"  Test R²: {metadata['test_r2']:.4f}\")\n",
+    "\n",
+    "# Example: Make predictions on new data\n",
+    "def predict_discrepancy(features_df):\n",
+    "    \"\"\"\n",
+    "    Predict discrepancy between ground and satellite PM2.5.\n",
+    "    \n",
+    "    Args:\n",
+    "        features_df: DataFrame with all required feature columns\n",
+    "        \n",
+    "    Returns:\n",
+    "        Array of predicted discrepancies\n",
+    "    \"\"\"\n",
+    "    return loaded_pipeline.predict(features_df)\n",
+    "\n",
+    "\n",
+    "def predict_corrected_pm25(features_df, satellite_value):\n",
+    "    \"\"\"\n",
+    "    Predict corrected PM2.5 using satellite value and predicted discrepancy.\n",
+    "    \n",
+    "    Args:\n",
+    "        features_df: DataFrame with all required feature columns\n",
+    "        satellite_value: Satellite AOD value (Aerosol_Index_satellite)\n",
+    "        \n",
+    "    Returns:\n",
+    "        Array of corrected PM2.5 values\n",
+    "    \"\"\"\n",
+    "    predicted_diff = predict_discrepancy(features_df)\n",
+    "    scaling_factor = metadata['scaling_factor']\n",
+    "    corrected_pm25 = (satellite_value * scaling_factor) + predicted_diff\n",
+    "    return corrected_pm25\n",
+    "\n",
+    "\n",
+    "# Example usage with sample data\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"Example: Making predictions on new data\")\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "# Create sample feature data (you would replace this with your actual data)\n",
+    "sample_data = pd.DataFrame({\n",
+    "    'NO2_satellite': [0.000191],\n",
+    "    'SO2_satellite': [-0.000433],\n",
+    "    'CO_satellite': [0.048550],\n",
+    "    'O3_satellite': [0.164568],\n",
+    "    'location': ['Anand Vihar, Delhi'],\n",
+    "    'PM10_ground': [449.58],\n",
+    "    'NO2_ground': [54.76],\n",
+    "    'SO2_ground': [10.5],\n",
+    "    'CO_ground': [2.1],\n",
+    "    'O3_ground': [60.0],\n",
+    "    'lat': [28.65],\n",
+    "    'lon': [77.31],\n",
+    "    'distance_to_major_road': [150.0],\n",
+    "    'total_road_length_m': [5000.0],\n",
+    "    'major_road_length_m': [1000.0],\n",
+    "    'pct_green': [15.5],\n",
+    "    'pct_industrial': [20.0],\n",
+    "    'pct_residential': [40.0],\n",
+    "    'building_density': [0.8],\n",
+    "    'avg_building_area_m2': [800.0],\n",
+    "    'median_building_area_m2': [350.0],\n",
+    "    'building_count': [500.0],\n",
+    "    'major_road_fraction': [0.19],\n",
+    "    'month': [1],\n",
+    "    'day_of_week': [2],\n",
+    "    'season': ['Winter'],\n",
+    "    'NO2_ratio': [286676.0],\n",
+    "    'SO2_ratio': [-24850.0],\n",
+    "    'CO_ratio': [75.0],\n",
+    "    'O3_ratio': [365.0]\n",
+    "})\n",
+    "\n",
+    "# Ensure all required columns are present\n",
+    "required_cols = metadata['feature_columns']\n",
+    "for col in required_cols:\n",
+    "    if col not in sample_data.columns:\n",
+    "        print(f\"Warning: Missing column {col}, using default value\")\n",
+    "        sample_data[col] = 0  # or use appropriate default\n",
+    "\n",
+    "# Reorder columns to match training data\n",
+    "sample_data = sample_data[required_cols]\n",
+    "\n",
+    "# Make predictions\n",
+    "satellite_aod = -1.098919  # Example AOD value\n",
+    "predicted_diff = predict_discrepancy(sample_data)\n",
+    "corrected_pm25 = predict_corrected_pm25(sample_data, satellite_aod)\n",
+    "\n",
+    "print(f\"\\nPredicted Discrepancy: {predicted_diff[0]:.2f}\")\n",
+    "print(f\"Satellite AOD: {satellite_aod}\")\n",
+    "print(f\"Corrected PM2.5: {corrected_pm25[0]:.2f}\")\n",
+    "print(f\"\\n✓ Prediction complete!\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"To use in your own code:\")\n",
+    "print(\"=\"*60)\n",
+    "print(\"\"\"\n",
+    "# In your Python script:\n",
+    "import joblib\n",
+    "from pathlib import Path\n",
+    "\n",
+    "MODEL_PATH = Path(\"models/best_model_pipeline.pkl\")\n",
+    "model = joblib.load(MODEL_PATH)\n",
+    "\n",
+    "# Prepare your data as a DataFrame with all feature columns\n",
+    "# Then simply call:\n",
+    "predictions = model.predict(your_dataframe)\n",
+    "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "ba6b362e",
    "metadata": {},
@@ -1565,6 +1799,152 @@
    "metadata": {},
    "source": [
     "## 7. Save Best Model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68709506",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'LinearRegression' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Get the best model class\u001b[39;00m\n\u001b[32m      6\u001b[39m model_classes = {\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mLinearRegression\u001b[39m\u001b[33m'\u001b[39m: \u001b[43mLinearRegression\u001b[49m,\n\u001b[32m      8\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mRidge\u001b[39m\u001b[33m'\u001b[39m: \u001b[38;5;28;01mlambda\u001b[39;00m: Ridge(alpha=\u001b[32m1.0\u001b[39m, random_state=\u001b[32m42\u001b[39m),\n\u001b[32m      9\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mLasso\u001b[39m\u001b[33m'\u001b[39m: \u001b[38;5;28;01mlambda\u001b[39;00m: Lasso(alpha=\u001b[32m1.0\u001b[39m, random_state=\u001b[32m42\u001b[39m),\n\u001b[32m     10\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mRandomForest\u001b[39m\u001b[33m'\u001b[39m: \u001b[38;5;28;01mlambda\u001b[39;00m: RandomForestRegressor(n_estimators=\u001b[32m100\u001b[39m, random_state=\u001b[32m42\u001b[39m, n_jobs=-\u001b[32m1\u001b[39m),\n\u001b[32m     11\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mGradientBoosting\u001b[39m\u001b[33m'\u001b[39m: \u001b[38;5;28;01mlambda\u001b[39;00m: GradientBoostingRegressor(n_estimators=\u001b[32m100\u001b[39m, random_state=\u001b[32m42\u001b[39m),\n\u001b[32m     12\u001b[39m }\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m XGBOOST_AVAILABLE:\n\u001b[32m     15\u001b[39m     model_classes[\u001b[33m'\u001b[39m\u001b[33mXGBoost\u001b[39m\u001b[33m'\u001b[39m] = \u001b[38;5;28;01mlambda\u001b[39;00m: xgb.XGBRegressor(n_estimators=\u001b[32m100\u001b[39m, random_state=\u001b[32m42\u001b[39m, n_jobs=-\u001b[32m1\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'LinearRegression' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Save all trained models as complete pipelines (preprocessor + model)\n",
+    "import joblib\n",
+    "import json\n",
+    "\n",
+    "# Get the model classes\n",
+    "model_classes = {\n",
+    "    'LinearRegression': LinearRegression,\n",
+    "    'Ridge': lambda: Ridge(alpha=1.0, random_state=42),\n",
+    "    'Lasso': lambda: Lasso(alpha=1.0, random_state=42),\n",
+    "    'RandomForest': lambda: RandomForestRegressor(n_estimators=100, random_state=42, n_jobs=-1),\n",
+    "    'GradientBoosting': lambda: GradientBoostingRegressor(n_estimators=100, random_state=42),\n",
+    "}\n",
+    "\n",
+    "if XGBOOST_AVAILABLE:\n",
+    "    model_classes['XGBoost'] = lambda: xgb.XGBRegressor(n_estimators=100, random_state=42, n_jobs=-1)\n",
+    "\n",
+    "# Get all model names that were trained\n",
+    "all_model_names = list(model_classes.keys())\n",
+    "\n",
+    "print(f\"Saving {len(all_model_names)} models as complete pipelines...\")\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "# Store all saved models info\n",
+    "saved_models_info = {}\n",
+    "all_models_metadata = {\n",
+    "    'feature_columns': feature_cols,\n",
+    "    'categorical_columns': categorical_cols,\n",
+    "    'numerical_columns': numerical_cols,\n",
+    "    'ground_col': ground_col,\n",
+    "    'satellite_col': satellite_col,\n",
+    "    'scaling_factor': 50.0 if satellite_col == 'Aerosol_Index_satellite' else 1.0,\n",
+    "    'models': {}\n",
+    "}\n",
+    "\n",
+    "# Save each model as a complete pipeline\n",
+    "for model_name in all_model_names:\n",
+    "    print(f\"\\nProcessing {model_name}...\")\n",
+    "    \n",
+    "    # Create a fresh instance of the model\n",
+    "    fresh_model = model_classes[model_name]()\n",
+    "    \n",
+    "    # Create a complete pipeline (preprocessor + model)\n",
+    "    model_pipeline = Pipeline([\n",
+    "        ('preprocessor', preprocessor),\n",
+    "        ('model', fresh_model)\n",
+    "    ])\n",
+    "    \n",
+    "    # Retrain on full training data\n",
+    "    print(f\"  Retraining {model_name} on full training set...\")\n",
+    "    model_pipeline.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Evaluate on test set\n",
+    "    y_test_pred = model_pipeline.predict(X_test)\n",
+    "    test_mae = mean_absolute_error(y_test, y_test_pred)\n",
+    "    test_rmse = np.sqrt(mean_squared_error(y_test, y_test_pred))\n",
+    "    test_r2 = r2_score(y_test, y_test_pred)\n",
+    "    \n",
+    "    # Save the pipeline to disk using joblib\n",
+    "    model_filename = f\"{model_name.lower()}_pipeline.pkl\"\n",
+    "    model_path = MODELS_DIR / model_filename\n",
+    "    joblib.dump(model_pipeline, model_path)\n",
+    "    \n",
+    "    # Store model info\n",
+    "    saved_models_info[model_name] = {\n",
+    "        'filename': model_filename,\n",
+    "        'path': str(model_path),\n",
+    "        'test_rmse': float(test_rmse),\n",
+    "        'test_mae': float(test_mae),\n",
+    "        'test_r2': float(test_r2)\n",
+    "    }\n",
+    "    \n",
+    "    all_models_metadata['models'][model_name] = {\n",
+    "        'test_rmse': float(test_rmse),\n",
+    "        'test_mae': float(test_mae),\n",
+    "        'test_r2': float(test_r2),\n",
+    "        'filename': model_filename\n",
+    "    }\n",
+    "    \n",
+    "    print(f\"  ✓ {model_name} saved to: {model_path}\")\n",
+    "    print(f\"    Test RMSE: {test_rmse:.4f}, Test MAE: {test_mae:.4f}, Test R²: {test_r2:.4f}\")\n",
+    "\n",
+    "# Save comprehensive metadata for all models\n",
+    "metadata_path = MODELS_DIR / \"all_models_metadata.json\"\n",
+    "with open(metadata_path, 'w') as f:\n",
+    "    json.dump(all_models_metadata, f, indent=2)\n",
+    "print(f\"\\n✓ All models metadata saved to: {metadata_path}\")\n",
+    "\n",
+    "# Also save a summary with best model info\n",
+    "summary = {\n",
+    "    'best_model': best_model_name,\n",
+    "    'best_model_info': saved_models_info[best_model_name],\n",
+    "    'all_models': saved_models_info,\n",
+    "    'feature_columns': feature_cols,\n",
+    "    'categorical_columns': categorical_cols,\n",
+    "    'numerical_columns': numerical_cols,\n",
+    "    'ground_col': ground_col,\n",
+    "    'satellite_col': satellite_col,\n",
+    "    'scaling_factor': 50.0 if satellite_col == 'Aerosol_Index_satellite' else 1.0\n",
+    "}\n",
+    "\n",
+    "summary_path = MODELS_DIR / \"models_summary.json\"\n",
+    "with open(summary_path, 'w') as f:\n",
+    "    json.dump(summary, f, indent=2)\n",
+    "print(f\"✓ Models summary saved to: {summary_path}\")\n",
+    "\n",
+    "# Create a symlink/copy of the best model for convenience\n",
+    "best_model_path = MODELS_DIR / \"best_model_pipeline.pkl\"\n",
+    "best_model_source = MODELS_DIR / saved_models_info[best_model_name]['filename']\n",
+    "import shutil\n",
+    "shutil.copy(best_model_source, best_model_path)\n",
+    "print(f\"✓ Best model ({best_model_name}) also saved as: {best_model_path}\")\n",
+    "\n",
+    "print(f\"\\n{'='*60}\")\n",
+    "print(\"All models saved successfully!\")\n",
+    "print(f\"{'='*60}\")\n",
+    "print(f\"\\nSaved models:\")\n",
+    "for model_name, info in saved_models_info.items():\n",
+    "    marker = \" ⭐ BEST\" if model_name == best_model_name else \"\"\n",
+    "    print(f\"  - {model_name}: {info['filename']} (RMSE: {info['test_rmse']:.4f}){marker}\")\n",
+    "\n",
+    "print(f\"\\nTo load a model:\")\n",
+    "print(f\"  import joblib\")\n",
+    "print(f\"  model = joblib.load('models/{{model_name}}_pipeline.pkl')\")\n",
+    "print(f\"  predictions = model.predict(your_dataframe)\")\n",
+    "print(f\"{'='*60}\")\n"
    ]
   },
   {
